<resources>
    <string name="app_name">PhoneHelper</string>
    <string name="appurl">http://192.168.1.6/mytest/update.xml</string>
    <string name="protect">防盗保护已经开启</string>
    <string name="unprotect">防盗保护没有开启</string>
    <string name="phone_protect">手机防盗</string>
    <string name="check_number">请输入要查询的号码</string>
    <string name="btnCheck">查询</string>
    <string name="tips_number_not_null">号码不能为空</string>
    <string name="title_advance_tool">高级工具</string>
    <string name="address_check">手机号码归属地查询</string>
    <string name="toast_bg_style">设置归属地背景</string>
    <string name="address_style">归属地风格</string>
    <string name="cancel">取消</string>
    <string name="location_top">按住提示框拖动到任意位置\n按手机返回键立刻生效</string>
    <string name="common_number">常用号码查询</string>
    <string name="blackList">黑名单管理</string>
    <string name="add">添加</string>
    <string name="phoneIntercept">拦截电话</string>
    <string name="messageIntercept">拦截短信</string>
    <string name="allIntercept">拦截电话和短信</string>
    <string name="no_more_data">没有数据了</string>
    <string name="input_black_number">请输入黑名单号码</string>
    <string name="phone">电话</string>
    <string name="message">短信</string>
    <string name="all">全部</string>
    <string name="delete_tips">删除提示</string>
    <string name="confirm_delete">确定删除吗？</string>
    <string name="confirm_ok">确定</string>
    <string name="black_setting">黑名单拦截设置</string>
    <string name="black_setting_on">黑名单拦截已开启</string>
    <string name="black_setting_off">黑名单拦截已关闭</string>
    <string name="app_manage">软件管理</string>
    <string name="loading">loading...</string>
    <string name="availableMem">内存可用:</string>
    <string name="availableSD">SD卡可用:</string>
    <string name="sys_app">系统应用</string>
    <string name="user_app">用户应用</string>
    <string name="outrom">外部存储</string>
    <string name="inrom">手机内存</string>
    <string name="no_ui">当前应用没有界面</string>
    <string name="error">打开错误</string>
    <string name="msgBackUp">短信备份</string>
    <string name="backuping">正在备份</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="process_manage">进程管理</string>
    <string name="runningProcess">运行中的进程数:</string>
    <string name="mem">可用/总内存:</string>
    <string name="user_process">用户进程数:</string>
    <string name="sys_process">系统进程数:</string>
    <string name="process_setting">进程设置</string>
    <string name="showSysProcess">显示系统进程</string>
    <string name="killProcessWhenLock">锁屏清理进程</string>
    <string name="data_statistic">流量统计</string>
    <string name="upload">上传:</string>
    <string name="download">下载:</string>
</resources>
