<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="300dip"
        android:layout_height="45dip"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/input_black_number"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="280dip"
        android:layout_height="wrap_content"
        android:hint="@string/input_black_number"
        android:inputType="phone"
        android:textColor="#000000" />

    <RadioGroup
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/rg_mode"
        android:layout_width="300dip"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/phone" />

        <RadioButton
            android:id="@+id/rb_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message" />

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:text="确定"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:background="@drawable/btn_selector"
            android:text="取消"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>